2010-10-14  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #15800: Cleanup CSH code (Thanks to Benjamin Mack and Steffen Kamper)

2010-10-14  Benjamin Mack  <benni@typo3.org>

	* Followup to #15740: Move versioning code from TCEmain into "version" extension - delete action deleted entries twice (once in deleteAction and once in version extension)
	* Fixed bug #15798: Deprecate some old functions in typo3/template.php
	* Fixed bug #15801: Deprecate t3lib_div::rm_endcomma
	* Fixed bug #103: No Plain-text List Option

2010-10-13  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15644: Replace magic numbers for shortcut_mode with class constants
	* Follow-up to #15874: Provide unit tests for t3lib_div::dirname (Thanks to Oliver Klee)

2010-10-12  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15168: Template auto complete is hidden beneath next text area field

2010-10-12  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15950: Use t3editor in file_edit to edit files in fileadmin
	* Fixed bug #15965: codemirror lib for t3editor should be moved to contrib and updated to latest version
	* Fixed bug #15968: Remove block mode from syntaxhighlighted code
	* Added feature #15621: Feature: TYPO3 misses page-option to force SSL oder Non-SSL to page (Thanks to Steffen Ritter)
	* Update #15970: Update ExtJS to version 3.3.0
	* Follow-up to #15900: [Feature] Add SVG support for all browsers

2010-10-11  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15907: file_edit: add hooks to mutate the output
	* Added feature #15900: [Feature] Add SVG support for all browsers
	* Fixed bug #12376: typo3temp got filled with thousands of javascript_* files (Thanks to Georg Ringer)

2010-10-10  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15783: Improve ExtJS skin: Tabs
	* Follow-up to #15649: Fixed "false" statement in JS code (Thanks to Jigal van Hemert)

2010-10-10  Steffen Kamper  <steffen@typo3.org>
