@@ -1,3 +1,7 @@
+2010-10-15  Susanne Moog  <typo3@susanne-moog.de>
+
+	* Fixed bug #8980: unlink of non existant lockfiles generates warnings in frontend (Thanks to André Stösel)
+
 2010-10-14  Jeff Segars  <jeff@webempoweredchurch.org>
 
 	* Fixed bug #15800: Cleanup CSH code (Thanks to Benjamin Mack and Steffen Kamper)
